# jane-street-competition

./: Makefile  README.md  janestreet-xfrmr.ipynb  pyproject.toml  sample_submission.csv
lags.parquet/date_id=0/: part-0.parquet
